[tool.poetry]
name = "dihub"
version = "0.1.0"
description = "DIHub is a dependency injection framework for Python"
authors = ["Alfarih Faza <alfarihfz@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
