[tool.poetry]
name = "dihub"
version = "0.1.10"
description = "DIHub is a dependency injection framework for Python"
authors = ["Alfarih Faza <alfarihfz@gmail.com>"]
license = "BSD"
readme = "README.md"
homepage = "https://github.com/alfarih31/dihub"
repository = "https://github.com/alfarih31/dihub"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["dihub"]
omit = ["*/venv/*", "*_test.py", "types.py"]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
